--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,13 +24,17 @@ set_target_properties( ${PROJECT_NAME} PROPERTIES
 	SOVERSION 1
 )
 
-set(VARACTION_HEADERS inc/varaction.h)
+set(VARACTION_HEADERS inc/varaction/varaction.h)
 
 set_target_properties(${PROJECT_NAME} PROPERTIES PUBLIC_HEADER "${VARACTION_HEADERS}")
 
 target_include_directories( ${PROJECT_NAME} PRIVATE . )
 
 target_include_directories( ${PROJECT_NAME} PUBLIC inc )
+
+target_link_libraries( ${PROJECT_NAME}
+    varserver
+)
 
 install(TARGETS ${PROJECT_NAME}
 	LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
